--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="2798007.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    
-    <meta
-      name="description"
-      content="Web site for movies"
-    />
-    
 
-   
-   
-    <title>Movies & Series</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="2798007.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  </body>
+  <meta name="description" content="Web site for movies" />
+  <meta name="description" content="Website for movies, reviews, and top-rated films" />
+  <meta name="keywords" content="movies, films, reviews, trending movies, top rated movies" />
+  <meta name="author" content="Saeed Mohamed Akkar" />
+
+  <meta property="og:title" content="Movies Website" />
+  <meta property="og:description" content="Explore movies, reviews, and top-rated films." />
+  <meta property="og:image" content="2798007.png" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Movies Website" />
+  <meta name="twitter:description" content="Explore movies, reviews, and top-rated films." />
+  <meta name="twitter:image" content="2798007.png" />
+
+  <title>Movies & Series</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+
+</body>
+
 </html>
